Fix gamescreen not showing by renaming functions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,8 +220,8 @@ header {
 }
 
 .intro-screen-grid {
-  /* display: grid; */
-  display: none;
+  display: grid;
+  /* display: none; */
   gap: 1rem;
   grid-template-columns: 1fr 2fr;
   grid-template-areas:
@@ -262,9 +262,9 @@ header {
 -------------------------- */
 
 #game-screen {
-  /* display: none; */
-  /* opacity: 0; */
-  display: block;
+  display: none;
+  opacity: 0;
+  /* display: block; */
   transition: opacity 0.8s;
   text-align: center;
   margin-top: 1.5rem;
@@ -326,9 +326,9 @@ header {
 -------------------------- */
 
 #result-screen {
-  /* display: none; */
-  /* opacity: 0; */
-  display: block;
+  display: none;
+  opacity: 0;
+  /* display: block; */
   transition: opacity 0.8s;
   text-align: center;
   margin-top: 1.5rem;
